@@ -1,6 +1,8 @@
 djvusmooth (0.2.7) UNRELEASED; urgency=low
 
   * Add Russian translation, contributed by Kyrill Detinov.
+  * Handle non-ASCII metadata keys.
+    Thanks to Aleš Kapica for the bug report.
 
  -- Jakub Wilk <jwilk@jwilk.net>  Tue, 15 Jun 2010 21:11:31 +0200
 
